web-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: psko-demo-nginx
  labels:
    run: nginx
spec:
  type: NodePort
  ports:
#  port of the service
  - port: 8080
#  targets TCP port on any Pod with the label equal to selector
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: nginx
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: web
        image: registry.gitlab.com/tjscott/psko-devops-demo/web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: registrypullsecret
